Prevent accidental gaps in test-result-card fade

--- a/src/app/components/test-result-card/style.sass
+++ b/src/app/components/test-result-card/style.sass
@@ -63,7 +63,7 @@ $radius: 5px
     position: absolute
     z-index: 4
     top: 0
-    right: 1.6rem
+    right: calc(1.6rem - 1px)
     width: 2rem
     height: 100%
     background: linear-gradient(90deg, transparent, $dark-3)
